# platform.upstream.adns

./: adns-1.4.tar.bz2.delta  adns-1.4.tar.bz2.id  configure.in
client/: Makefile.in
dynamic/: Makefile.in
packaging/: adns-1.4-destdir.patch  adns-1.4-ipv6.patch  adns-ocloexec.patch  adns-visibility.patch  adns.changes  adns.spec  baselibs.conf
src/: Makefile.in  adns.h  event.c  internal.h  setup.c
